@@ -135,6 +135,9 @@ Release 0.9.0 - unreleased
 
   BUG FIXES
 
+    TAJO-1029: TAJO_PULLSERVER_STANDALONE should be false in default tajo-env.sh
+    (jinho)
+
     TAJO-1017: TajoConf misuses read & write locks in some functions. 
     (Mai Hai Thanh via hyunsik)
 
